--- a/camsim-pmd-longbox/CMakeLists.txt
+++ b/camsim-pmd-longbox/CMakeLists.txt
@@ -13,8 +13,9 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 project(camsim-pmd-longbox)
 
+set(CMAKE_CXX_STANDARD 11)
 if(CMAKE_COMPILER_IS_GNUCXX)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11 -Wall -Wextra")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
 endif()
 
 find_package(Qt5 5.6.0 COMPONENTS Gui)
