--- a/libcamsim/CMakeLists.txt
+++ b/libcamsim/CMakeLists.txt
@@ -21,8 +21,9 @@ set(CAMSIM_SOVERSION 0)
 option(CAMSIM_BUILD_DOCUMENTATION "Build API reference documentation (requires Doxygen)" OFF)
 
 # Compiler and system
+set(CMAKE_CXX_STANDARD 14)
 if(CMAKE_COMPILER_IS_GNUCXX)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++14 -Wall -Wextra")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
 endif()
 
 # Required libraries
