Update for latest ASSIMP

--- a/libcamsim/CMakeLists.txt
+++ b/libcamsim/CMakeLists.txt
@@ -30,7 +30,7 @@ endif()
 find_package(Qt5 5.6.0 COMPONENTS Gui Concurrent)
 
 # Optional libraries
-find_package(ASSIMP QUIET)
+find_package(assimp QUIET)
 find_package(GTA QUIET)
 find_package(MATIO QUIET)
 find_package(HDF5 COMPONENTS CXX QUIET)
@@ -59,7 +59,7 @@ set_target_properties(libcamsim PROPERTIES OUTPUT_NAME camsim)
 set_target_properties(libcamsim PROPERTIES VERSION ${CAMSIM_LIBVERSION})
 set_target_properties(libcamsim PROPERTIES SOVERSION ${CAMSIM_SOVERSION})
 target_link_libraries(libcamsim Qt5::Gui Qt5::Concurrent)
-if(ASSIMP_FOUND)
+if(assimp_FOUND)
     add_definitions(-DHAVE_ASSIMP)
     include_directories(${ASSIMP_INCLUDE_DIRS})
     target_link_libraries(libcamsim ${ASSIMP_LIBRARIES})
